2012-02-27  Roland McGrath  <roland@hack.frob.com>

	* rt/tst-aio.c: Include <fcntl.h>.
	* rt/tst-aio7.c: Likewise.
	* rt/tst-aio64.c: Likewise.

	* stdio-common/tst-fmemopen.c (main): Remove spurious const.

2012-02-27  Joseph Myers  <joseph@codesourcery.com>

	* manual/install.texi (--with-headers): Describe headers as
	interface headers, not private headers.
	(Specific advice for GNU/Linux systems): Describe use of headers
	from "make headers_install", not private headers from older
	kernels.
	* INSTALL: Regenerated.
	* sysdeps/unix/sysv/linux/configure.in (LIBC_LINUX_VERSION):
	Change to 2.6.19.
	* sysdeps/unix/sysv/linux/configure: Regenerated.

	* manual/llio.texi (fclean): Remove documentation.

	* manual/Makefile (libc-texi-generated): New variable.  Include
	version.texi.
	(libc.dvi, libc.pdf, libc.info, libc/index.html): Depend on
	$(libc-texi-generated), not duplicated list of files.
	(version.texi, stamp-version): New rules.
	(realclean): Remove $(libc-texi-generated), not individual files
	from that list.  Do not remove dir-add.texinfo.
	* manual/libc.texinfo: Comment out uses of edition numbers and
	references to printed manual.  Remove last-updated dates.
	(EDITION): Comment out.
	(ISBN): Likewise.
	(VERSION, UPDATED): Remove.
	(version.texi): Include.

2012-02-27  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/posix/spawni.c: Include <signal.h>.
	* sysdeps/pthread/aio_cancel.c: Include <fcntl.h>.
	* sysdeps/pthread/aio_fsync.c: Likewise.

2012-02-26  Ulrich Drepper  <drepper@gmail.com>

	* conform/Makefile (tests): Run only when not cross-compiling and
	when fast-check is not defined.

	* conform/conformtest.pl: XPG7 and POSIX2008 require C99.
	* conform/data/limits.h-data: Fixes for POSIX2008.
	* conform/run-conformtest.sh: Run all tests.
	* include/arpa/inet.h: Changes to allow conformtest.pl to use the
	headers.
	* include/bits/dlfcn.h: Likewise.
	* include/langinfo.h: Likewise.
	* include/monetary.h: Likewise.