@@ -1,5 +1,11 @@
 2012-02-27  Roland McGrath  <roland@hack.frob.com>
 
+	[BZ #13775]
+	* libio/bits/stdio-ldbl.h (vdprintf, dprintf): Put these under
+	[__USE_XOPEN2K8] rather than [__USE_GNU], to match the stdio.h decls.
+	* libio/stdio.h (vdprintf, dprintf): Remove comment about these not
+	being in POSIX, because they are in 1003.1-2008.
+
 	* rt/tst-aio.c: Include <fcntl.h>.
 	* rt/tst-aio7.c: Likewise.
 	* rt/tst-aio64.c: Likewise.
